<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="my_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_bigger">Build it bigger</string>
    <string name="xyz_reader">xyz Reader</string>
    <string name="capstone_app">Capstone: My own app</string>

    <string name="launch_spotify_streamer">This button will launch My Spotify Streamer!</string>
    <string name="launch_scores_app">This button will launch My Scores App!</string>
    <string name="launch_library_app">This button will launch My Library App!</string>
    <string name="launch_build_bigger">This button will launch My Build it Bigger App!</string>
    <string name="launch_xyz_reader">This button will launch My XYZ Reader!</string>
    <string name="launch_capstone">This button will launch My Capstone App!</string>
</resources>
