<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/my_apps" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/button_row_padding"
            android:paddingRight="@dimen/button_row_padding">

            <Button
                android:id="@+id/btn_spotify_streamer"
                style="@style/OrangeButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="launchSpotifyStreamer"
                android:text="@string/spotify_streamer" />

            <Button
                style="@style/OrangeButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="launchScoresApp"
                android:text="@string/scores_app" />

            <Button
                style="@style/OrangeButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="launchLibraryApp"
                android:text="@string/library_app" />

            <Button
                style="@style/OrangeButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="launchBuildItBigger"
                android:text="@string/build_bigger" />

            <Button
                style="@style/OrangeButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="launchXyzReader"
                android:text="@string/xyz_reader" />

            <Button
                style="@style/CapstoneButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:onClick="launchCapstone"
                android:text="@string/capstone_app" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
